<resources>
    <string name="app_name">Druk Grammar</string>
    <string name="dec1">སྔོན་འཇུག་གི་ཡི་གུ་ ཟེར་མི་འདི་ ག། ད། བ། མ། འ། ལྔ་ཨིན།\n\nདེ་ཚུ་ མིང་གཞིའི་ཡི་གུ་ཚུ་གི་སྔོན་མར་ \tའཇུག་ནི་འདི་གིས་  སྔོན་ འཇུག་ཟེར་སླབ་ཨིན།
</string>
    <string name="jenju">རྗེས་འཇུག་གི་ཡི་གུ་འདི་ ག། ང་། ད། ན། བ། མ། འ། ར། ལ། ས། ཨིན།\n\nདེ་ཚུ་ མིང་གཞི་ཡི་གུའི་ཤུལ་ལས་འཇུག་ནི་ འདི་གིས་ རྗེས་ འཇུག་ཟེར་སླབ་ ཨིན།\n\n\n</string>
    <string name="mingzhi">མིང་གཞིའི་ཡི་གུ་ཟེར་མི་འདི་ རྗོད་སྒླ་ཤུགས་སྟོན་མི་ལུ་སླབ་ ཨིན།\n\nམིང་གཞིའི་ཡི་གུ་འདི་ གསལ་བྱེད་སུམ་ཅུ་ཨིན།\n\n\n
</string>
    <string name="yangju">ཡང་འཇུག་ཟེར་མི་འདི་ རྗེས་འཇུག་གི་རྗེས་སུ་ དྩོ་རུང་ཡང་འཇུག་ནི་འདི་ གིས་ ཡང་འཇུག་ཟེར་ སླབ་ཨིན།\n\nཡང་འཇུག་གི་ཡི་གུ་འདི་ ས་ ཨིན།\n\nདེ་ཡང་ རྗེས་འཇུག་ ག་ ང་ བ་ མ་ བཞི་ལུ་ཐོབ་ཨིན།\n\n\n
</string>
    <string name="keyney">ཡི་གུའི་སྐྱེ་གནས་ཟེར་མི་འདི་ རྫོང་ཁའི་ཡི་གུ་གསལ་བྱེད་སུམ་ཅུ་དང་ དབྱངས་བཞི་ཚུ་ ཁོག་པའི་ནང་ལས་སྐྱེཝ་ད་གི་ སྐྱེ་གནས་སོ་སོར་ཡོད་མི་ལུ་སླབ་ཨིན།</string>
    <string name="KeyneyTypes">\nཡི་གུའི་སྐྱེ་གནསའི་དབྱེ་བ།</string>
    <string name="keyneyforms">ཀ༽\tསྐྱེ་གནས་གཙོ་བོ།</string>
    <string name="keyney1">\n༡༽\tམགྲིན་པ་ལས་སྐྱེས་པའི་ཡི་གུ་འདི་ ཀ། ཁ། ག། ང་། འ། ཧ། ཨ། བདུན་ཨིན།\nཀ། ཁ། ག། ང་ བཞི་མགྲིན་པ་བཙུམས་པ་ལས་འཐོནམ་ཨིན།</string>
    <string name="keyney2">\n\n༢༽\tརྐན་ལས་སྐྱེས་པའི་ཡི་གུ་འདི་ ཅ། ཆ། ཇ། ཉ། ཞ། ཡ། ཤ། ཨི། ཨེ་དང་དགུ་ཨིན།\n
     ཨེ་འདི་ ཨི་དང་ཅོག་འཐད་པའི་གུ་ མ་མཆུ་ཨ་ཙི་ཅིག་ མར་ཕབ་པ་ལས་བརྟེན་ཏེ་འཐོནམ་ཨིན།</string>
    <string name="keyney3">\n\n༣༽\tསོ་ལས་སྐྱེས་པའི་ཡི་གུ་འདི་ ཏ། ཐ། ད། ན། ཙ། ཚ། ཛ། ཟ། ལ། ས་དང་བཅུ་ཐམ་ཨིན།\nདེ་ཡང་། ཏ། ཐ། ད། ན། ཙ། ཚ། ཛ། ལ་བརྒྱདཔྩོ་འདི་ ཡ་སོ་དང་ ཉེ་བའི་སྐྱེ་ གནས་ ལྕེ་རྩེ་གཉིས་ ཤུགས་དྲག་པོར་ཕྱདཔ་ལས་ འཐོནམ་ཨིན།\nཟ་དང་ས་གཉིས་ མ་ས་དང་ཉེ་བའི་སྐྱེ་གནས་ ལྕེ་རྩེ་གཉིས་ ཤུགས་ཞནམ་སྦེ་ཕྱདཔ་ལས་ འཐོནམ་ཨིན།</string>
    <string name="keyney4">\n\n༤༽\tམཆུ་ལས་སྐྱེས་པའི་ཡི་གུ་འདི་ པ། ཕ། བ། མ། ཝ། ཨུ། ཨོ་བདུན་ཨིན།\nཔ། ཕ། བ། མ་བཞི་པྩོ་ཡ་ མཆུ་མ་མཆུ་གཉིས་ གཅིག་ཁར་སརཝ་ལས་འཐོནམ་ཨིན།</string>
    <string name="ming">མིང་ཟེར་མི་འདི་ དོན་གྱི་ངོ་བོ་ཙམ་སྟོན་མི་ལུ་སླབ་ཨིན།</string>
    <string name="ming_example">དཔེར་ན།\n\nཔད་མ།\t\tསྐུ།\t\tདྲིལ་བུ།</string>
    <string name="ming_types">མིང་ཙམ་ལུ་ ནང་གསེས་ཀྱི་དབྱེ་བ།</string>
    <string name="mingtypes">\n༡༽\tསྤྱི་མིང་།\t\t\t༢༽སྒེར་མིང་།\t\t\t༣༽ཚོགས་མིང་།\n༤༽གྲངས་མིང་།\t\t\t༥༽རྟགས་མིང་། \t\t\t༦༽མངོན་མིན་གྱི་མིང་།\n༧༽ཞེ་སའི་མིང་།</string>
    <string name="minghead">\nདཔེར་བརྗོད།</string>
    <string name="ming_type1">\n༡༽ སྥྱི་མིང་།\n\nདཔེར་ན།\t\t\tབ།\t\t\t ལྷ།\t\t\tཤིང་།</string>
    <string name="ming_type2">\n༢༽ སྒེར་མིང་།\n\nདཔེར་ན།\t\t\tཀ་རྨ།\t\t\tདབང་ཕྱུག།\t\t\tཉི་མ།</string>
    <string name="ming_type3">\n༣༽ ཚོགས་མིང་།\n\nདཔེར་ན།\t\t\tཁྲི་མས་སྲུང་འགག་པ།\t\t\tརུ་ཁག ཁྱུ།</string>
    <string name="ming_type4">\n༤༽ གྲངས་མིང་།\n\nདཔེར་ན།\t\t\tཔི་སི་ཚུ།\t\t\tང་བཅས་ཆ་ཁྱབ།\t\t\tསློབ་དཔོན་ཚུ།</string>
    <string name="ming_type5">\n༥༽ རྟགས་མིང་།\n\nདཔེར་ན།\t\t\tརྒྱལ་པོ།\t\t\tརྒྱལ་མོ།\t\t\tཨ་པ།\t\t\tཨའི།</string>
    <string name="ming_type6">\n༦༽ མངོན་མིན་གྱི་མིང་།\n\nདཔེར་ན། \t\t\tབརྩེ་བ།\t\t\tསྙིང་རྗེ།\t\t\tཁོང་ཁྲོ།</string>
    <string name="ming_type7">\n༧༽ ཞེ་སའི་མིང་།\n\nདཔེར་ན།\t\t\tཡབ།\t\t\tཤངས།\t\t\tདབུ།
</string>
    <string name="mingtsabDef">མིང་ཚབ་ཟེར་མི་ འདི་གོང་གསལ་མིང་གི་རྣམ་གྲངས་ཚུ་གི་ཚབ་མ་སྦེ་ དོན་གོ་ཚུགས་པའི་རིགས་ལུ་ མིང་ཚབ་ཟེར་སླབ་ཨིན།</string>
    <string name="mingtsabtype">\nམིང་ཚབ་ཀྱི་དབྱེ་བ།</string>
    <string name="mingtsab_type1">\n༡༽ གང་ཟག་གི་མིང་ཚབ།\nདཔེར་ན།\t\t\tམོ།\t\t\tཁོ།\t\t\tཁྱེད།
</string>
    <string name="mingtsab_type2">\n༢༽ དབྱེ་འབྱེད་ཀྱི་མིང་ཚབ།\nདཔེར་ན།\t\t\tསོ་སོ།\t\t\t\ག་ར་འབད་རུང་།\t\t\tརེ་རེ།
</string>
    <string name="mingtsab_type3">\n༣༽ སྤྱི་འཇུག་གི་མིང་ཚབ།\nདཔེར་ན།\t\t\tའདི།\t\t\tའདི་ཚུ།\t\t\tདེ།\t\t\tདེ་ཚུ།
</string>
    <string name="mingtsab_type4">\n༤༽ ངེས་བཟུང་གི་མིང་ཚབ།\nདཔེར་ན།\t\t\tཁོ་ར།\t\t\tཁོ་ར་རང་།\t\t\tཁོང་ར།\t\t\tཁོང་ར་རང་།
</string>
    <string name="mingtsab_type5">\n༥༽བྱ་ཡུལ་གྱི་མིང་ཚབ།\nདཔེར་ན།\t\t\tཕར།\t\t\tཚུར།\t\t\tཡར།\t\t\tར།ཨ་ནཱ།\t\t\tདེ་ན།
</string>
    <string name="khesigDef">ཁྱད་ཚིག་ཟེར་མི་འདི་ གོང་གསལ་གྱི་མིང་ཙམ་དེ་ཚུ་ རེ་རེ་བཞིན་གྱི་ ཡོན་ཏན་དང་ ཁྱད་ཆོས་མ་འདྲ་བའི་ ཁྱད་པར་གྱི་ སྐོར་ལས་ དབྱེ་ བ་ཁ་གསལ་སྦེ་སྟོན་མི་ལུ་སླབཨིན།</string>
    <string name="khesigType">\nཁྱད་ཚིག་ལུ་ནང་གསེས་ཀྱི་དབྱེ་བ།</string>
    <string name="khesigType1">\n༡༽ རང་བཞིན་གྱི་ཁྱད་ཚིག།\nདཔེར་ན།\nཁོིང་བཟའ་ཚང་དགའ་ཏོག་ཏོ་འདུག།\nཁྱོད་ཕམ་དང་གཅིག་ཁར་སྐྱིད་ཏོང་ཏོ་སྦེ་སྡོད་དགོ།</string>
    <string name="khesigType2">\n༢༽ གྲངས་ཀྱི་ཁྱད་ཚིག།\nདཔེར་ན།\nམི་ ལ་ལུ་ འྟོ་ཟ་དེས།\nཁོང་ དག་པ་ཅིག་ལཱ་དེས།
</string>
    <string name="khesigType3">\n༣༽ དུས་ཀྱི་ཁྱད་ཚིག།\nདཔེར་ན།\nཁོ་ དུས་ཅི་ འགྱོ་དོ།\nམི་ཚུ་ ནམ་ཡང་ འྩོང་ནི་མིན་འདུག།
</string>
    <string name="khesigType4">\n༤༽ ཁྱད་ཆོས་ཀྱི་ཁྱད་ཚིག།\nདཔེར་ན།\nགླང་ གནགཔོ་ ཨིན་པས།</string>
    <string name="khesigType5">༥༽ འགྲན་བསྡུར་གྱི་ཁྱད་ ཚིག།\nདཔེར་ན།\nཧ།\t\t\tཧ་དྲགས།\t\t\tཧ་ཤོས།\t\t\tབཟང་།\t\t\tབཟང་དྲགས།\t\t\tབཟང་ཤོས།
</string>
    <string name="jepaDef">བརྗོད་པ་ཟེར་མི་འདི་ ཚིག་གི་སྡེ་ཚན་ཅིག་བསྡོམས་ཏེ་ གོ་དོན་ཅིག་་གསལ་རི་རི་སྦེ་ སྟོན་ཚུགས་མི་ཅིག་ལུ་སླབ་ཨིན།</string>
    <string name="jepatypes">\nབརྗོད་པ་བཟོ་ཐངས་ཀྱི་དབྱེ་བ།</string>
    <string name="jepatypes1">\n༡༽ བརྗོད་པ་རྐྱང་པ ་ ཟེར་མི་འདི་ རྗོད་ཚིག་ཐུང་ཀུ་ཅིག་ནང་ བཤད་དགོ་མནོ་བའི་དོན་ངོ་མ་གི་ བཅུད་དོན་རྐྱངམ་གཅིག་ གཙོ་བོ་བཏོན་ཏེ་ བཤད་མི་ལོ་གོ་ནི་ཨིན།\nདཔེར་ན།\nཁོ་སྤ་རོ་ལུ་འགྱོ་ནི་ཨིན།\nཁོ་སློབ་གྲྦ་ནང་འགྱོ་ནི་ཨིན།</string>
    <string name="jepatypes༢">\n\n༢༽ བརྗོད་པ་ཆ་ཚང་ ཟེར་མི་འདི་ རྗོད་ཚིག་གཅིག་ནང་ བཤད་དགོ་མནོ་བའི་ གནད་དོན་ངོ་མ་འདི་གི་ བརྗོད་དོན་ཧ་ ལམ་ཅིག་ ཚངམ་འབད་ བཤད་ནི་ཡོད་མི་ཅིག་ལུ་ གོ་ནི་ཨིན།\nདཔེར་ན།\nཁྱོད་ད་རིས་ཁྲོམ་ཁར་འགྱོ་སྦེ་ཅ་ལ་ཉོ།</string>
    <string name="jepatypes3">\n\n༣༽ བརྗོད་པ་སྣ་འདུས་ ཟེར་མི་འདི་ རྗོད་ཚིག་གཅིག་གི་ནང་ལུ་ དོན་དག་མ་འདྲཝ་གཉིས་རེ་ ཚུད་དེ་ཡོད་མི་ལུ་སླབ་ ཨིན།\nདཔེར་ན།\nང་སློབ་གྲྦ་ནང་ལྷོད་ཞིནམ་ལས་ དཔེ་ཆ་ལྷབ་དགོ།</string>
    <string name="tshicheDef">\nཚིགས་བཅད་ཀྱི་བརྗོད་པ་ཟེར་མི་འདི་ ཚིག་རྐང་རེ་ནང་ ཚིག་འབྲུ་འདྲན་ འདྲ་སྦེ་བཟོ་སྟེ་ཡོད་མི་ལུ་སླབ་ཨིན།</string>
    <string name="tshicheEg">དཔེར་ན།\nང་བཅས་དགའ་བའི་སློབ་གྲྦ་།། ང་བཅས་སྐྱིད་བའི་སློབ་གྲྦ་།།\n
             དགའ་བའི་སློབ་གྲྦ་འདི་ནང་།། བྱོན་པ་ལེགས་སོ་ལེགས་སོ།།</string>
    <string name="namA1">རྣམ་དབྱེ་དང་པ་ངོ་བོ་ཙམ་སྟོན་པ་ཟེར་མི་འདི་ བརྗོད་བྱའི་དོན་ག་ཅི་ ར་ཨིན་རུང་ མིང་རྐྱངམ་ཅི་སྟོན་མི་ལུ་ སླབ་ཨིན།</string>
    <string name="namA1Eg">དཔེར་ན།\t\t\tཐིམ་ཕུ།\t\t\tཀུན་དགའ།</string>
    <string name="namA2Def">རྣམ་དབྱེ་གཉིས་པ་ལས་སུ་བྱ་བ་ཟེར་མི་འདི་ བྱ་བའི་ཡུལ་ལམ་ལས་ཅིག་ལུ་ བྱེད་པ་པོ་ཅིག་གིས་ ལཱ་ཅིག་འབད་བའི་དོན་སྟོན་པའི་ཚིག་ཅིག་ལུ་སླབ་ཨིན།</string>
    <string name="namA2Type">\nའདི་ལུ་ནང་གསེས་ཀྱི་དབྱེ་བ།</string>
    <string name="namA2Type1">\nཀ༽ལས་སུ་བྱ་བའི་རྣམ་དབྱེ།\nདཔེར་ན།\t\t\tཁྱིམ་ནང་ན་སོང་།\t\t\tཁྱིམ་ཐོག་གུ་འཛེག།</string>
    <string name="namA2Type2">ཁ༽བྱ་ལས་དབྱེར་མེད་ཀྱི་རྣམ་དབྱེ།\nདཔེར་ན།\t\t\tཨོམ་ཆུ་ལུ་གྱུར།\t\t\tསྤྱ་མི་ལུ་གྱུར།</string>
    <string name="namA2Type3">ལས་སུ་བྱ་བ་ ལུ་ཕྲད།\t\t\tན།\t\t\tར།\t\t\tལུ།\t\t\tགུ།\n\nབྱ་ལས་དབྱེར་མེད་ཀྱི་ཕྲད།\t\t\tར་དང་ལུ།</string>
    <string name="jepapoDef">རྣམ་དབྱེ་གསུམ་པ་བྱེད་པ་པོ་ཟེར་མི་འདི་ བྱ་བའི་ལཱ་ག་ཅི་ར་འབད་རུང་ དེ་འབད་མི་དང་ མ་འབད་མི་ གང་ཟག་དང་ངོས་པོ་ག་ཨིན་ན་ སྟོན་པའི་སྒྲ་ལུ་སླབ་ཨིན།\nརྣམ་དབྱེ་གསུམ་པ་བྱེད་པ་པོའི་ཕྲད།\t\t\tཀྱིས།\t\t\tགིས།\t\t\tགྱིས།\t\t\tའིས།\t\t\tཡིས།
</string>
    <string name="jepapotypes">\nརྣམ་དབྱེ་གསུམ་པ་བྱེད་པ་པོའི་དབྱེ་བ།</string>
    <string name="jepapotype1">\nཀ༽བྱེད་པ་པོ་གཙོ་བོ།\nདཔེར་བརྗོད།\t\t\tདབང་ཕྱུག་གིས་ལྟོ་ཟ།\t\t\tབདེ་སྐྱིད་ཀྱིས་ཤིང་བཏོག།</string>
    <string name="jepapotype2">\nཁ༽བྱེད་པ་པོ་ཕལ་པ།\nདཔེར་བརྗོད།\t\t\tཔི་སི་གིས་ཡི་གུ་བྲིས།\t\t\tསྟ་རེ་གིས་ཤིང་བཏོག།</string>
    <string name="jepapotype3">\nག༽རང་བཞིན་གྱི་བྱེད་པ་པོ།\nདཔེར་བརྗོད།\t\t\tརང་བཞིན་གྱིས་སྐྱེས་ཡི།\t\t\tམོ་ར་གིས་ར་སྐམ་སོ་ཡི།</string>
    <string name="jepapotype4">\nང༽རྒྱུ་མཚན་གྱི་དོན་ལུ་འཇུག་པ།\nདཔེར་བརྗོད།\t\t\tདེ་གིས་འབད་ཧ་གོ་ཡི།\t\t\tཕོག་ནི་དེ་གིས་དྲག་ཅི།</string>
    <string name="gaychay">བྱ་བའི་ལཱ་ཅིག་ དགོས་པ་ག་ཅི་གི་དོན་ལུ་འབདཝ་ཨིན་ན་ སྟོན་མི་ཅིག་ལུ་སླབ་ཨིན།\nདཔེར་ན།\nལཱ་འབད་བར་སོང་།\nཁྱིམ་ནང་ཉལ་བར་འགྱོ།</string>
    <string name="jungkhung">གཞི་ཅིག་ལས་ ག་ཅི་འབད་རུང་གཅིག་ བྱུང་པའི་དོན་སྟོན་པའི་སྒྲ་ལུ་ སླབ་ཨིན།\nདེ་ ལུ་ནང་གསེས་ཀྱི་དབྱེ་བ།\n༡༽འབྱུང་ཁུངས་དངོས།\n༢༽ཆ་འདྲ་བ།\n༣༽འགྲན་ བསྡུར།\n༤༽རྒྱུ་མཚན།\n༥༽སྡུད་སྒྲ།</string>
    <string name="jungkhungeg">འབྱུང་ཁུངས་ཀྱི་ཕྲད།\t\tལས།\nདཔེར་ན།\t\t\tབ་ལས་ཨོམ།\t\t\tཕ་ལས་བུ།</string>
    <string name="delda">འབྲེལ་སྒྲའི་རྣམ་དབྱེ་ཟེར་མི་འདི་ གང་ཟག་དང་དངོས་པོ་ཚུ་གི་བར་ན་ འབྲེལ་བ་སྟོན་པའི་ཚིག་ལུ་སླབ་ཨིན།\nའབྲེལ་སྒྲའི་ཕྲད།\t\t\tཀྱི།\t\t\tགི།\t\t\tགྱི།\t\t\tའི།\t\t\tཡི།</string>
    <string name="deldatype">ཀ༽\tངོ་བོ་བདག་གཅིག་གི་འབྲེལ་བ།\nདཔེར་ན།\t\t\tདར་གྱི་མདུད་ཕོད།\t\t\tཤིང་གི་སྒྲོམ།</string>
    <string name="deldatype2">\nཁ༽\tདེ༌ལས༌དེ༌འབྱུང་གི་འབྲེལ་བ།\nདཔེར་ན།\t\t\tཤིང༌གི༌རྡོག༌མ།\t\t\tབ་གི་ཕྱུག་གུ།</string>
    <string name="deldatype3">\nག༽\tཁྱད༌གཞི༌ཁྱད༌ཆོས་ཀྱི་འབྲེལ་བ།\nདཔེར་ན\t\t\tསྟག༌གི༌རི༌མོ།\t\t\tབུ༌མོའི༌ངོ༌རིས།</string>
    <string name="deldatype4">\nང༽\tཡན༌ལག༌དང༌ཡན༌ལག༌ཅན་གྱི་འབྲེལ་བ།\nདཔེར་ན།\t\t\tཤིང༌གི༌ཞལ༌ལག།\t\t\tཁུ་རུའི་སྒྲོ།</string>
    <string name="deldatype5">\nཅ༽\tནོར་དང་བདག་པོའི་འབྲེལ་བ།\nདཔེར་ན\t\t\tཀུན་བཟང་གི་ཁྱིམ།\t\t\tཁོ་གི་འབྲི་དེབ།</string>
    <string name="deldatype6">ཆ༽རྟེན༌དང༌བརྟེན༌པའི་འབྲེལ་བ།\nདཔེར་ན།\t\t\tཆུའི༌ཉ།\t\t\tཁྱིམ་ནང་གི་མི།</string>

</resources>