<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bg"
    tools:context=".Activity13">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="209dp"
        android:layout_height="62dp"
        android:background="@drawable/part2_head"
        android:gravity="center"
        android:text="མིང་།"
        android:textColor="@color/black"
        android:textSize="70px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:onClick="part24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.550"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/la" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="55dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="part26"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.070"
        app:srcCompat="@drawable/ra" />

    <ScrollView
        android:layout_width="366dp"
        android:layout_height="588dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.652">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/ming"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="225dp"
                android:layout_height="123dp"
                android:text="@string/ming_example"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_types"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:text="@string/mingtypes"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minghead"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type1"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type2"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type3"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type4"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type5"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type6"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming_type7"
                android:textColor="@color/black"
                android:textSize="60px"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>