<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bg"
    tools:context=".Activity22">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:background="@drawable/part2_head"
        android:gravity="center"
        android:text="རྣམ་དབྱེ་གསུམ་པ་བྱེད་པ་པོ།"
        android:textColor="@color/black"
        android:textSize="65px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="55dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        android:onClick="part48"
        app:srcCompat="@drawable/la" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="55dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        android:onClick="part49"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/ra" />

    <ScrollView
        android:layout_width="392dp"
        android:layout_height="555dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px"
                android:text="@string/jepapoDef"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px"
                android:text="@string/jepapotypes"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jepapotype1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jepapotype2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jepapotype3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:text="@string/jepapotype4"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="60px" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>